2012-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py (FavMenuItem._is_enabled): Added support for self-favouring.
	* gfeedline.glade: Improved the welcome message.

2012-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* et.po: Updated Estonian translation.  Thanks Rivo Zängov!

2012-06-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6 release.

2012-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6 rc 1 release.
	* view.py (FeedWebView.on_hovering_over_link): Fixed a scroll lock
	  problem.

2012-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6 beta 1 release.
	* twitter/output.py, twitter/api.py: Show user own reply messages
	  on reply tabs.
	* es_ES.po: Updated Spanish translation.  Thanks alexnmoya!

2012-04-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* filterliststore.py: Fixed a filter expiration bug.

2012-04-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/output.py, twitter/tweetentry.py: Show retweeting user
	  info (event) for my tweets.

2012-04-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py (FeedWebView): Fixed a backslash escaping (issue #2).

2012-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py (FeedEventEntry.get_dict): Fixed a bug
	  that prevented showing user stream events.

2012-04-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 release.

2012-04-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* it_IT.po: Updated Italian translation.  Thanks Daniele Napolitano!

2012-03-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks alexnmoya!

2012-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 beta 1 release.
	* feedsource.py: Added an Options tab to Feed Source Dialog.

2012-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
	  Barrientos!
	* theme.py: Added support for user theme directory.
	  (~/.config/gfeedline/theme/)
