@@ -1,3 +1,8 @@
+2012-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twitter/api.py (TwitterAPIListTimeLine.get_options): Added
+	  checking for list names. Thanks @Adan2JP!
+
 2012-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* menu.py (FavMenuItem._is_enabled): Added support for self-favouring.
